# agent

./: .gitignore  Cargo.toml  README.md
.github/workflows/: agent-tests.yml
agentd/: Cargo.toml  default_config.toml
agentd/src/: lock.rs  main.rs  memory_ctx.rs  oobe.rs
crates/kiki-config/: Cargo.toml
crates/kiki-config/src/: crypto.rs  keystore.rs  lib.rs  recovery.rs  scope.rs  sync.rs
crates/kiki-config/tests/: config_live.rs
crates/kiki-core/: Cargo.toml
crates/kiki-core/src/: agent.rs  capability.rs  context.rs  context_manager.rs  error.rs  gate.rs  harness.rs  interrupt.rs  lib.rs  memory.rs  policy.rs  provider.rs  state.rs  surface.rs  tool.rs  types.rs
crates/kiki-fleet/: Cargo.toml
crates/kiki-fleet/src/: auth.rs  client.rs  heartbeat.rs  lib.rs  migration.rs  sync.rs
crates/kiki-fleet/tests/: fleet_live.rs  session_relay_live.rs
crates/kiki-mcp/: Cargo.toml
crates/kiki-mcp/src/: client.rs  hub.rs  lib.rs  loader.rs  parser.rs  server.rs
crates/kiki-mcp/tests/: app_tool_roundtrip.rs  net_fetch.rs
crates/kiki-memory/: Cargo.toml
crates/kiki-memory/src/: client.rs  lib.rs  store.rs
crates/kiki-memory/tests/: socket.rs
crates/kiki-net/: Cargo.toml
crates/kiki-net/src/: lib.rs
crates/kiki-oauth/: Cargo.toml
crates/kiki-oauth/src/: lib.rs  store.rs
crates/kiki-orchestrator/: Cargo.toml
crates/kiki-orchestrator/src/: bus.rs  dreamer.rs  lib.rs  scheduler.rs  session.rs
crates/kiki-pkg/: Cargo.toml
crates/kiki-pkg/examples/: parse_manifest.rs
crates/kiki-pkg/src/: kpkg.rs  lib.rs
crates/kiki-provider/: Cargo.toml
crates/kiki-provider/src/: anthropic.rs  lib.rs  local.rs  modal.rs  openai.rs  router.rs
crates/kiki-provider/tests/: capstone_e2e.rs  harness_e2e.rs  ollama_live.rs  provider_mock.rs
crates/kiki-sandbox/: Cargo.toml
crates/kiki-sandbox/examples/: landlock_check.rs  seccomp_check.rs
crates/kiki-sandbox/src/: firecracker.rs  landlock.rs  lib.rs  namespace.rs  seccomp.rs  wayland_filter.rs
crates/kiki-state/: Cargo.toml
crates/kiki-state/src/: file.rs  hybrid.rs  lib.rs  memory.rs  ostree.rs
crates/kiki-telemetry/: Cargo.toml
crates/kiki-telemetry/src/: lib.rs
crates/kiki-vault/: Cargo.toml
crates/kiki-vault/src/: cache.rs  client.rs  lib.rs  mcp_tools.rs  uri.rs
crates/kiki-vault/tests/: vault_live.rs
memoryd/: Cargo.toml
memoryd/src/: main.rs
