[package]
name        = "memoryd"
description = "Kiki OS memory daemon — serves the four-layer memory store over /run/kiki/memory.sock"
edition.workspace = true
workspace   = "./.."

[[bin]]
name = "memoryd"
path = "src/main.rs"

[dependencies]
kiki-memory = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = "0.3"
serde_json  = { workspace = true }

[dev-dependencies]
tempfile = "3"
