[package]
name                   = "kiki-net"
description            = "Kiki egress broker — the single audited network-egress point for apps (net.fetch)"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
reqwest     = { workspace = true }
url         = "2"
async-trait = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio    = { workspace = true }
