[package]
name        = "kiki-orchestrator"
description = "Desktop session manager, DAG task scheduler, event bus, multi-agent coordination"
edition.workspace = true
workspace   = "./../.."

[dependencies]
kiki-core   = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
petgraph    = "0.6"
