[package]
name        = "kiki-provider"
description = "LLM provider abstraction — OpenAI, Anthropic, Groq, local (llama.cpp/ollama), Modal"
edition.workspace = true
workspace   = "./../.."

[dependencies]
kiki-core   = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true }
futures     = { workspace = true }
serde_json  = { workspace = true }
async-trait = { workspace = true }
kiki-core   = { workspace = true }
kiki-state  = { workspace = true }
