[package]
name        = "kiki-state"
description = "OSTree-backed state backend — durable execution, hotswap, migration"
edition.workspace = true
workspace   = "./../.."

[dependencies]
kiki-core   = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
