[package]
name        = "kiki-telemetry"
description = "OpenTelemetry + Prometheus tracing and metrics"
edition.workspace = true
workspace   = "./../.."

[dependencies]
kiki-core          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
