[package]
name              = "kiki-vault"
description       = "Vault client — shared blob store cross-device/fleet with CAS, LRU cache, MCP tools"
edition.workspace = true
workspace         = "./../.."

[dependencies]
tokio        = { workspace = true, features = ["full"] }
async-trait  = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
reqwest      = { workspace = true }
futures      = { workspace = true }
sha2         = "0.10"
hex          = "0.4"
bytes        = "1"
url          = { version = "2", features = ["serde"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

[dev-dependencies]
tempfile   = "3"
tokio      = { workspace = true, features = ["full"] }
reqwest    = { workspace = true }
serde_json = { workspace = true }
